--- a/imageapp/package.json
+++ b/imageapp/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "google-map-react": "^1.1.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-google-maps": "^9.4.5",
     "react-infinite-scroll-component": "^4.5.1",
-    "react-scripts": "2.1.5"
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.5",
+    "react-scroll": "^1.7.11"
   },
   "scripts": {
     "start": "react-scripts start",
