--- a/imageapp/package.json
+++ b/imageapp/package.json
@@ -2,7 +2,9 @@
   "name": "imageapp",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://Roxolana4lana.github.io/imageGallery/",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "google-map-react": "^1.1.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
@@ -16,6 +18,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
